# mcp-tool-contract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_tool_contract/: __init__.py
tests/: test_contract.py
